entity_macros/tests/ui/derive/ent/missing-type-value-for-edge-attr.stderr
error: Unexpected meta-item format `word`
  --> $DIR/missing-type-value-for-edge-attr.rs:17:16
   |
17 |     #[ent(edge(type))]
   |                ^^^^
